# financial-reports-rag-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
ops/: cli.py
src/finrag/: __init__.py
src/finrag/adapters/: __init__.py  base.py  edgar.py  parsers.py  parsers_bs4.py  parsers_llamaparse.py
src/finrag/agents/: __init__.py  graph.py
src/finrag/core/: __init__.py  config.py  logging.py  tracing.py
src/finrag/domain/: __init__.py  exceptions.py  models.py  policy.py
src/finrag/eval/: __init__.py  metrics.py
src/finrag/ingest/: corpus_config.py  download_edgar_10k.py  parse_sections.py
src/finrag/services/: __init__.py  answer.py  retrieval.py
tests/: test_day1_smoke.py  test_day2_corpus.py  test_day3_parsing.py
